spacing issues

--- a/src/pages/operator/css/Operator.css
+++ b/src/pages/operator/css/Operator.css
@@ -80,6 +80,7 @@
 .operator-pose-library,
 .operator-pose-recorder,
 .operator-text-to-speech,
+.operator-rosbag-recorder,
 .operator-aruco-markers {
     background-color: whitesmoke;
     box-shadow: var(--shadow);
@@ -115,6 +116,7 @@
 .operator-pose-library[hidden],
 .operator-pose-recorder[hidden],
 .operator-text-to-speech[hidden],
+.operator-rosbag-recorder[hidden],
 .operator-aruco-markers[hidden] {
     display: none;
 }
@@ -209,6 +211,8 @@
     .operator-voice,
     .operator-pose-library,
     .operator-pose-recorder,
+    .operator-text-to-speech,
+    .operator-rosbag-recorder,
     .operator-aruco-markers {
         width: 30rem;
         height: 5rem;
